Fix contrast issues with post links

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -41,7 +41,8 @@
     }
 
     a {
-      @apply text-blue-500;
+      @apply text-blue-600;
+      @apply dark:text-blue-400;
       @apply hover:underline;
     }
 
